--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
+    "jquery": "^3.5.0",
+    "jquery-datepicker": "^1.12.3",
+    "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "eslint": "^8",
