--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "jquery-datepicker": "^1.12.3",
     "next": "13.5.6",
     "react": "^18",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18",
     "yup": "^1.3.2"
   },
