--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.6",
+    "cors": "^2.8.5",
     "debug": "~4.3.4",
     "express": "^4.18.2",
     "http-errors": "~2.0.0",
