--- a/redux-with-express/package.json
+++ b/redux-with-express/package.json
@@ -3,13 +3,15 @@
   "scripts": {
     "dev": "next -p 3002",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 3002"
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "next": "latest",
     "react": "18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
     "react-redux": "8.1.0"
   },
