--- a/redux-with-express/package.json
+++ b/redux-with-express/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
+    "@smastrom/react-rating": "^1.3.2",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
@@ -15,6 +16,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
     "react-redux": "8.1.0",
+    "sweetalert2": "^11.10.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
