--- a/with-redux-app/package.json
+++ b/with-redux-app/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
+    "@smastrom/react-rating": "^1.3.2",
     "bootstrap": "^5.3.2",
     "next": "latest",
     "react": "18.2.0",
