--- a/redux-with-express/package.json
+++ b/redux-with-express/package.json
@@ -6,6 +6,11 @@
     "start": "next start -p 3002"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "1.9.5",
     "@smastrom/react-rating": "^1.3.2",
     "axios": "^1.6.2",
